modules/gdscript/tests/scripts/analyzer/errors/assymetric_assignment_bad.gd
func test():
	var var_color: String = Color.RED
	print('not ok')
